Closed Bug 328496 Opened 20 years ago Closed 20 years ago

search engines appear multiple times

Categories

(Firefox :: Search, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Peter6, Assigned: enndeakin)

References

Details

(Keywords: regression)

Attachments

(1 file)

Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060224 Firefox/1.6a1 ID:2006022400-Cairo repro: 1. Open Firefox 2. press on default searchengine to to select different one result: every engine is multiple times in the list
*** Bug 328495 has been marked as a duplicate of this bug. ***
happens in both cairo and non-cairo builds
Most likely a regression from bug 328496.
More likely to be a regression from bug 326712 ;)
Blocks: 326712
oh, right :) stupid clipboard.
Turns out that the search service is modifying the RDF while the template is initially being built. This causes the modification notifications to update the template, then the initial build continues adding the same data again. Fix this by removing the old content when replacing a match similar to bug 327504. Why is the search service adding all the engines, removing them all again, and then readding them? For sorting?
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #213095 - Flags: superreview?(bzbarsky)
Attachment #213095 - Flags: review?(bzbarsky)
Attachment #213095 - Flags: superreview?(bzbarsky)
Attachment #213095 - Flags: superreview+
Attachment #213095 - Flags: review?(bzbarsky)
Attachment #213095 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Depends on: 328922
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: