Bug 328496, search results appear multiple times, r+sr=bz